Use TS for mermaidVisulaization, rework folder structure and add information about the license and the source of the icons in images/icons.

--- a/src/stateMachineVisualizationWebview/mermaidVisualization.html
+++ b/src/stateMachineVisualizationWebview/mermaidVisualization.html
@@ -13,10 +13,10 @@
     <div id="controls">
       <div class="button-container">
         <button id="downloadButton" class="styled-button">
-          <img src="__MERMAID_SCRIPT_URI__/../images/download.svg" alt="Download diagram">
+          <img src="__MERMAID_SCRIPT_URI__/../../images/icons/download.svg" alt="Download diagram">
         </button>
         <button id="resetButton" class="styled-button">
-            <img src="__MERMAID_SCRIPT_URI__/../images/reset.svg" alt="Reset view">
+            <img src="__MERMAID_SCRIPT_URI__/../../images/icons/reset.svg" alt="Reset view">
         </button>
       </div>
     </div>
